tests/snapshots/stdint_types.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct FixedPair {
    left: i16,
    right: u32,
    count: u64,
}


static mut global_size: u64 = 7;

static mut global_u32: u32 = 4000000000;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn add_i32(arg1: i32, arg2: i16) -> i32 {
    let mut a: i32 = 0;
    let mut b: i16 = 0;
    let mut __retval: i32 = 0;
    let mut sum: i32 = 0;
    a = arg1;
    b = arg2;
    let _v0: i32 = a;
    let _v1: i16 = b;
    let _v2: i32 = _v1 as i32;
    let _v3: i32 = _v0 + _v2;
    sum = _v3;
    let _v4: i32 = sum;
    __retval = _v4;
    let _v5: i32 = __retval;
    return _v5;
}

fn widen_u32(arg0: u32) -> u64 {
    let mut value: u32 = 0;
    let mut __retval: u64 = 0;
    let mut wide: u64 = 0;
    value = arg0;
    let _v0: u32 = value;
    let _v1: u64 = _v0 as u64;
    let _v2: u64 = unsafe { global_size };
    let _v3: u64 = _v1 + _v2;
    wide = _v3;
    let _v4: u64 = wide;
    __retval = _v4;
    let _v5: u64 = __retval;
    return _v5;
}

fn use_fixed_types() -> i32 {
    let mut __retval: i32 = 0;
    let mut small: i8 = 0;
    let mut byte: u8 = 0;
    let mut short_value: i16 = 0;
    let mut ushort_value: u16 = 0;
    let mut signed_value: i32 = 0;
    let mut wide: u64 = 0;
    let mut pair: FixedPair = FixedPair { left: 0, right: 0, count: 0 };
    let _v0: i8 = -5;
    small = _v0;
    let _v1: u8 = 250;
    byte = _v1;
    let _v2: i16 = 1200;
    short_value = _v2;
    let _v3: u16 = 65000;
    ushort_value = _v3;
    let _v4: i32 = 100000;
    let _v5: i16 = short_value;
    let _v6: i32 = add_i32(_v4, _v5);
    signed_value = _v6;
    let _v7: u32 = unsafe { global_u32 };
    let _v8: u64 = widen_u32(_v7);
    wide = _v8;
    let _v9: i16 = short_value;
    pair.left = _v9;
    let _v10: u32 = unsafe { global_u32 };
    pair.right = _v10;
    let _v11: u64 = unsafe { global_size };
    let _v12: u64 = 3;
    let _v13: u64 = _v11 + _v12;
    pair.count = _v13;
    let _v14: i8 = small;
    let _v15: i32 = _v14 as i32;
    let _v16: u8 = byte;
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = _v15 + _v17;
    let _v19: i16 = pair.left;
    let _v20: i32 = _v19 as i32;
    let _v21: i32 = _v18 + _v20;
    let _v22: i32 = signed_value;
    let _v23: i32 = _v21 + _v22;
    let _v24: u16 = ushort_value;
    let _v25: i32 = _v24 as i32;
    let _v26: i32 = _v23 + _v25;
    let _v27: u64 = _v26 as u64;
    let _v28: u64 = pair.count;
    let _v29: u64 = _v27 + _v28;
    let _v30: u64 = wide;
    let _v31: u64 = _v29 + _v30;
    let _v32: i32 = _v31 as i32;
    __retval = _v32;
    let _v33: i32 = __retval;
    return _v33;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 10;
    let _v3: i16 = 20;
    let _v4: i32 = add_i32(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%lu\n\0".as_ptr() as *mut i8;
    let _v7: u32 = 5;
    let _v8: u64 = widen_u32(_v7);
    let _v9: i32 = unsafe { printf(_v6 as *const i8, _v8) };
    let _v10: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = use_fixed_types();
    let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
    let _v13: i32 = 0;
    __retval = _v13;
    let _v14: i32 = __retval;
    std::process::exit(_v14 as i32);
}
