tests/snapshots/stdio_file_ownership.snap
---
source: tests/snapshot.rs
expression: rust
---
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    static mut stdout: *mut libc::FILE;
    fn remove(_0: *const i8) -> i32;
    fn fopen(_0: *const i8, _1: *const i8) -> *mut libc::FILE;
    fn puts(_0: *const i8) -> i32;
    fn fputs(_0: *const i8, _1: *mut libc::FILE) -> i32;
    fn fclose(_0: *mut libc::FILE) -> i32;
    fn fgets(_0: *mut i8, _1: i32, _2: *mut libc::FILE) -> *mut i8;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut name: aligned::Aligned<aligned::A16, [i8; 31]> = aligned::Aligned([0; 31]);
    let mut f: *mut libc::FILE = std::ptr::null_mut();
    let mut g: *mut libc::FILE = std::ptr::null_mut();
    let mut buf: aligned::Aligned<aligned::A16, [i8; 16]> = aligned::Aligned([0; 16]);
    let _v0: i32 = 0;
    __retval = _v0;
    *name = [115, 108, 97, 116, 101, 95, 115, 116, 100, 105, 111, 95, 102, 105, 108, 101, 95, 111, 119, 110, 101, 114, 115, 104, 105, 112, 46, 116, 109, 112, 0];
    let _v1: *mut i8 = name.as_mut_ptr() as *mut i8;
    let _v2: i32 = unsafe { remove(_v1 as *const i8) };
    let _v3: *mut i8 = name.as_mut_ptr() as *mut i8;
    let _v4: *mut i8 = b"w\0".as_ptr() as *mut i8;
    let _v5: *mut libc::FILE = unsafe { fopen(_v3 as *const i8, _v4 as *const i8) };
    f = _v5;
    {
        let _v6: *mut libc::FILE = f;
        let _v7: bool = _v6 != std::ptr::null_mut();
        let _v8: bool = !_v7;
        if _v8 {
            let _v9: *mut i8 = b"open-fail\0".as_ptr() as *mut i8;
            let _v10: i32 = unsafe { puts(_v9 as *const i8) };
            let _v11: i32 = 0;
            __retval = _v11;
            let _v12: i32 = __retval;
            std::process::exit(_v12 as i32);
        }
    }
    let _v13: *mut i8 = b"owned\n\0".as_ptr() as *mut i8;
    let _v14: *mut libc::FILE = f;
    let _v15: i32 = unsafe { fputs(_v13 as *const i8, _v14 as *mut libc::FILE) };
    let _v16: *mut libc::FILE = f;
    let _v17: i32 = unsafe { fclose(_v16 as *mut libc::FILE) };
    let _v18: *mut i8 = name.as_mut_ptr() as *mut i8;
    let _v19: *mut i8 = b"r\0".as_ptr() as *mut i8;
    let _v20: *mut libc::FILE = unsafe { fopen(_v18 as *const i8, _v19 as *const i8) };
    g = _v20;
    {
        let _v21: *mut libc::FILE = g;
        let _v22: bool = _v21 != std::ptr::null_mut();
        let _v23: bool = !_v22;
        if _v23 {
            let _v24: *mut i8 = b"reopen-fail\0".as_ptr() as *mut i8;
            let _v25: i32 = unsafe { puts(_v24 as *const i8) };
            let _v26: i32 = 0;
            __retval = _v26;
            let _v27: i32 = __retval;
            std::process::exit(_v27 as i32);
        }
    }
    *buf = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0];
    let _v28: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v29: i32 = 16;
    let _v30: *mut libc::FILE = g;
    let _v31: *mut i8 = unsafe { fgets(_v28 as *mut i8, _v29 as i32, _v30 as *mut libc::FILE) };
    let _v32: *mut libc::FILE = g;
    let _v33: i32 = unsafe { fclose(_v32 as *mut libc::FILE) };
    let _v34: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v35: *mut libc::FILE = unsafe { stdout };
    let _v36: i32 = unsafe { fputs(_v34 as *const i8, _v35 as *mut libc::FILE) };
    let _v37: *mut i8 = name.as_mut_ptr() as *mut i8;
    let _v38: i32 = unsafe { remove(_v37 as *const i8) };
    let _v39: i32 = 0;
    __retval = _v39;
    let _v40: i32 = __retval;
    std::process::exit(_v40 as i32);
}
