tests/snapshots/stdio_gets_loop_eof.snap
---
source: tests/snapshot.rs
expression: rust
---
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    static mut stdout: *mut libc::FILE;
    fn remove(_0: *const i8) -> i32;
    fn fopen(_0: *const i8, _1: *const i8) -> *mut libc::FILE;
    fn puts(_0: *const i8) -> i32;
    fn fputs(_0: *const i8, _1: *mut libc::FILE) -> i32;
    fn fclose(_0: *mut libc::FILE) -> i32;
    fn fgets(_0: *mut i8, _1: i32, _2: *mut libc::FILE) -> *mut i8;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut f: *mut libc::FILE = std::ptr::null_mut();
    let mut g: *mut libc::FILE = std::ptr::null_mut();
    let mut line: aligned::Aligned<aligned::A16, [i8; 64]> = aligned::Aligned([0; 64]);
    let mut h: *mut libc::FILE = std::ptr::null_mut();
    let mut e: *mut libc::FILE = std::ptr::null_mut();
    let mut empty_line: aligned::Aligned<aligned::A16, [i8; 64]> = aligned::Aligned([0; 64]);
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { remove(_v1 as *const i8) };
    let _v3: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v4: *mut i8 = b"w\0".as_ptr() as *mut i8;
    let _v5: *mut libc::FILE = unsafe { fopen(_v3 as *const i8, _v4 as *const i8) };
    f = _v5;
    {
        let _v6: *mut libc::FILE = f;
        let _v7: bool = _v6 != std::ptr::null_mut();
        let _v8: bool = !_v7;
        if _v8 {
            let _v9: *mut i8 = b"open-fail\0".as_ptr() as *mut i8;
            let _v10: i32 = unsafe { puts(_v9 as *const i8) };
            let _v11: i32 = 0;
            __retval = _v11;
            let _v12: i32 = __retval;
            std::process::exit(_v12 as i32);
        }
    }
    let _v13: *mut i8 = b"only\n\0".as_ptr() as *mut i8;
    let _v14: *mut libc::FILE = f;
    let _v15: i32 = unsafe { fputs(_v13 as *const i8, _v14 as *mut libc::FILE) };
    let _v16: *mut libc::FILE = f;
    let _v17: i32 = unsafe { fclose(_v16 as *mut libc::FILE) };
    let _v18: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v19: *mut i8 = b"r\0".as_ptr() as *mut i8;
    let _v20: *mut libc::FILE = unsafe { fopen(_v18 as *const i8, _v19 as *const i8) };
    g = _v20;
    {
        let _v21: *mut libc::FILE = g;
        let _v22: bool = _v21 != std::ptr::null_mut();
        let _v23: bool = !_v22;
        if _v23 {
            let _v24: *mut i8 = b"reopen-fail\0".as_ptr() as *mut i8;
            let _v25: i32 = unsafe { puts(_v24 as *const i8) };
            let _v26: i32 = 0;
            __retval = _v26;
            let _v27: i32 = __retval;
            std::process::exit(_v27 as i32);
        }
    }
    {
        loop {
            let _v28: *mut i8 = line.as_mut_ptr() as *mut i8;
            let _v29: i32 = 64;
            let _v30: *mut libc::FILE = g;
            let _v31: *mut i8 = unsafe { fgets(_v28 as *mut i8, _v29 as i32, _v30 as *mut libc::FILE) };
            let _v32: *mut i8 = std::ptr::null_mut();
            let _v33: bool = _v31 != _v32;
            if !_v33 {
                break;
            }
            {
                let _v34: *mut i8 = line.as_mut_ptr() as *mut i8;
                let _v35: *mut libc::FILE = unsafe { stdout };
                let _v36: i32 = unsafe { fputs(_v34 as *const i8, _v35 as *mut libc::FILE) };
            }
        }
    }
    let _v37: *mut libc::FILE = g;
    let _v38: i32 = unsafe { fclose(_v37 as *mut libc::FILE) };
    let _v39: *mut i8 = b"done\0".as_ptr() as *mut i8;
    let _v40: i32 = unsafe { puts(_v39 as *const i8) };
    let _v41: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v42: *mut i8 = b"w\0".as_ptr() as *mut i8;
    let _v43: *mut libc::FILE = unsafe { fopen(_v41 as *const i8, _v42 as *const i8) };
    h = _v43;
    {
        let _v44: *mut libc::FILE = h;
        let _v45: bool = _v44 != std::ptr::null_mut();
        let _v46: bool = !_v45;
        if _v46 {
            let _v47: *mut i8 = b"open-fail\0".as_ptr() as *mut i8;
            let _v48: i32 = unsafe { puts(_v47 as *const i8) };
            let _v49: i32 = 0;
            __retval = _v49;
            let _v50: i32 = __retval;
            std::process::exit(_v50 as i32);
        }
    }
    let _v51: *mut libc::FILE = h;
    let _v52: i32 = unsafe { fclose(_v51 as *mut libc::FILE) };
    let _v53: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v54: *mut i8 = b"r\0".as_ptr() as *mut i8;
    let _v55: *mut libc::FILE = unsafe { fopen(_v53 as *const i8, _v54 as *const i8) };
    e = _v55;
    {
        let _v56: *mut libc::FILE = e;
        let _v57: bool = _v56 != std::ptr::null_mut();
        let _v58: bool = !_v57;
        if _v58 {
            let _v59: *mut i8 = b"reopen-fail\0".as_ptr() as *mut i8;
            let _v60: i32 = unsafe { puts(_v59 as *const i8) };
            let _v61: i32 = 0;
            __retval = _v61;
            let _v62: i32 = __retval;
            std::process::exit(_v62 as i32);
        }
    }
    {
        loop {
            let _v63: *mut i8 = empty_line.as_mut_ptr() as *mut i8;
            let _v64: i32 = 64;
            let _v65: *mut libc::FILE = e;
            let _v66: *mut i8 = unsafe { fgets(_v63 as *mut i8, _v64 as i32, _v65 as *mut libc::FILE) };
            let _v67: *mut i8 = std::ptr::null_mut();
            let _v68: bool = _v66 != _v67;
            if !_v68 {
                break;
            }
            {
                let _v69: *mut i8 = empty_line.as_mut_ptr() as *mut i8;
                let _v70: *mut libc::FILE = unsafe { stdout };
                let _v71: i32 = unsafe { fputs(_v69 as *const i8, _v70 as *mut libc::FILE) };
            }
        }
    }
    let _v72: *mut libc::FILE = e;
    let _v73: i32 = unsafe { fclose(_v72 as *mut libc::FILE) };
    let _v74: *mut i8 = b"empty-done\0".as_ptr() as *mut i8;
    let _v75: i32 = unsafe { puts(_v74 as *const i8) };
    let _v76: *mut i8 = b"slate_stdio_gets_loop_eof.tmp\0".as_ptr() as *mut i8;
    let _v77: i32 = unsafe { remove(_v76 as *const i8) };
    let _v78: i32 = 0;
    __retval = _v78;
    let _v79: i32 = __retval;
    std::process::exit(_v79 as i32);
}
