tests/snapshots/stdio_gets_loop_truncation.snap
---
source: tests/snapshot.rs
expression: rust
---
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    static mut stdout: *mut libc::FILE;
    fn remove(_0: *const i8) -> i32;
    fn fopen(_0: *const i8, _1: *const i8) -> *mut libc::FILE;
    fn puts(_0: *const i8) -> i32;
    fn fputs(_0: *const i8, _1: *mut libc::FILE) -> i32;
    fn fclose(_0: *mut libc::FILE) -> i32;
    fn fgets(_0: *mut i8, _1: i32, _2: *mut libc::FILE) -> *mut i8;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut f: *mut libc::FILE = std::ptr::null_mut();
    let mut g: *mut libc::FILE = std::ptr::null_mut();
    let mut line: [i8; 8] = [0; 8];
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"slate_stdio_gets_loop_truncation.tmp\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { remove(_v1 as *const i8) };
    let _v3: *mut i8 = b"slate_stdio_gets_loop_truncation.tmp\0".as_ptr() as *mut i8;
    let _v4: *mut i8 = b"w\0".as_ptr() as *mut i8;
    let _v5: *mut libc::FILE = unsafe { fopen(_v3 as *const i8, _v4 as *const i8) };
    f = _v5;
    {
        let _v6: *mut libc::FILE = f;
        let _v7: bool = _v6 != std::ptr::null_mut();
        let _v8: bool = !_v7;
        if _v8 {
            let _v9: *mut i8 = b"open-fail\0".as_ptr() as *mut i8;
            let _v10: i32 = unsafe { puts(_v9 as *const i8) };
            let _v11: i32 = 0;
            __retval = _v11;
            let _v12: i32 = __retval;
            std::process::exit(_v12 as i32);
        }
    }
    let _v13: *mut i8 = b"0123456789abcdef\n\0".as_ptr() as *mut i8;
    let _v14: *mut libc::FILE = f;
    let _v15: i32 = unsafe { fputs(_v13 as *const i8, _v14 as *mut libc::FILE) };
    let _v16: *mut i8 = b"short\n\0".as_ptr() as *mut i8;
    let _v17: *mut libc::FILE = f;
    let _v18: i32 = unsafe { fputs(_v16 as *const i8, _v17 as *mut libc::FILE) };
    let _v19: *mut libc::FILE = f;
    let _v20: i32 = unsafe { fclose(_v19 as *mut libc::FILE) };
    let _v21: *mut i8 = b"slate_stdio_gets_loop_truncation.tmp\0".as_ptr() as *mut i8;
    let _v22: *mut i8 = b"r\0".as_ptr() as *mut i8;
    let _v23: *mut libc::FILE = unsafe { fopen(_v21 as *const i8, _v22 as *const i8) };
    g = _v23;
    {
        let _v24: *mut libc::FILE = g;
        let _v25: bool = _v24 != std::ptr::null_mut();
        let _v26: bool = !_v25;
        if _v26 {
            let _v27: *mut i8 = b"reopen-fail\0".as_ptr() as *mut i8;
            let _v28: i32 = unsafe { puts(_v27 as *const i8) };
            let _v29: i32 = 0;
            __retval = _v29;
            let _v30: i32 = __retval;
            std::process::exit(_v30 as i32);
        }
    }
    {
        loop {
            let _v31: *mut i8 = line.as_mut_ptr() as *mut i8;
            let _v32: i32 = 8;
            let _v33: *mut libc::FILE = g;
            let _v34: *mut i8 = unsafe { fgets(_v31 as *mut i8, _v32 as i32, _v33 as *mut libc::FILE) };
            let _v35: *mut i8 = std::ptr::null_mut();
            let _v36: bool = _v34 != _v35;
            if !_v36 {
                break;
            }
            {
                let _v37: *mut i8 = line.as_mut_ptr() as *mut i8;
                let _v38: *mut libc::FILE = unsafe { stdout };
                let _v39: i32 = unsafe { fputs(_v37 as *const i8, _v38 as *mut libc::FILE) };
            }
        }
    }
    let _v40: *mut libc::FILE = g;
    let _v41: i32 = unsafe { fclose(_v40 as *mut libc::FILE) };
    let _v42: *mut i8 = b"slate_stdio_gets_loop_truncation.tmp\0".as_ptr() as *mut i8;
    let _v43: i32 = unsafe { remove(_v42 as *const i8) };
    let _v44: i32 = 0;
    __retval = _v44;
    let _v45: i32 = __retval;
    std::process::exit(_v45 as i32);
}
